# Detecting-Refusal-Inconsistency-Failure-Transfer-across-languages

./: .gitignore  =0.46.1  COLAB.md  Qwen3-1.7B__hi (1).jsonl  Qwen3-1.7B__hi.gen.jsonl  Qwen3-1.7B__hi.manifest.json  README.md  RUN_ON_H100.md  colab_gen.py  colab_run (1).py  colab_run.py  pyproject.toml  requirements-h100.txt  run_h100.sh
configs/: gemma-3-12b-it__hi__nosysp.yaml  gemma-4-12b-it__hi__nosysp.yaml  llama-3-8b__bn.yaml  llama-3.2-8b-instruct__hi.yaml  ministral-3-8b-instruct__hi.yaml  prefix_review.csv  qwen2.5-3b__bn.yaml  qwen2.5-3b__hi.yaml  qwen3-0.6b__bn.yaml  qwen3-0.6b__gu.yaml  qwen3-0.6b__hi.yaml  qwen3-0.6b__kn.yaml  qwen3-0.6b__ml.yaml  qwen3-0.6b__mr.yaml  qwen3-0.6b__ne.yaml  qwen3-0.6b__or.yaml  qwen3-0.6b__pa.yaml  qwen3-0.6b__ta.yaml  qwen3-0.6b__te.yaml  qwen3-0.6b__ur.yaml  qwen3-1.7b__bn.yaml  qwen3-4b__bn.yaml  qwen3-4b__gu.yaml  qwen3-4b__hi.yaml  qwen3-4b__kn.yaml  qwen3-4b__ml.yaml  qwen3-4b__mr.yaml  qwen3-4b__ne.yaml  qwen3-4b__or.yaml  qwen3-4b__pa.yaml  qwen3-4b__ta.yaml  qwen3-4b__te.yaml  qwen3-4b__ur.yaml
data/: IndicSafe.csv
results/: Meta-Llama-3-8B-Instruct__bn.jsonl  Meta-Llama-3-8B-Instruct__bn.manifest.json  Meta-Llama-3-8B-Instruct__hi.gen.jsonl  Meta-Llama-3-8B-Instruct__hi.jsonl  Meta-Llama-3-8B-Instruct__hi.manifest.json  Meta-Llama-3-8B-Instruct__hi__nosysp.gen.jsonl  Meta-Llama-3-8B-Instruct__hi__nosysp.jsonl  Meta-Llama-3-8B-Instruct__hi__nosysp.manifest.json  Qwen2.5-3B__hi.gen.jsonl  Qwen2.5-3B__hi.jsonl  Qwen3-0.6B__bn.gen.jsonl  Qwen3-0.6B__bn.jsonl  Qwen3-0.6B__bn.manifest.json  Qwen3-0.6B__gu.jsonl  (+57 more)
(+13 files in other folders)
